--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.7.13",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "mobx": "^6.7.0",
     "mobx-react": "^7.6.0",
     "mobx-react-lite": "^3.4.0",
     "node-sass": "^8.0.0",
